keycloak/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: keycloak-postgres
  namespace: nok-bng

spec:
  serviceName: keycloak-postgres

  replicas: 1

  selector:
    matchLabels:
      app: keycloak-postgres

  template:
    metadata:
      labels:
        app: keycloak-postgres

    spec:
      containers:
      - name: postgres

        image: postgres:16

        ports:
        - containerPort: 5432

        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
  - metadata:
      name: postgres-data

    spec:
      accessModes:
      - ReadWriteOnce

      storageClassName: standard

      resources:
        requests:
          storage: 10Gi
