keycloak/keycloak-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: nok-bng

spec:
  selector:
    app: keycloak

  ports:
  - name: http
    port: 8080
    targetPort: 8080

  type: ClusterIP
