keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: nok-base
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-set-headers: "nok-base/keycloak-proxy-headers"
    nginx.ingress.kubernetes.io/proxy-hide-headers: "X-Frame-Options,Content-Security-Policy"
spec:
  ingressClassName: nginx
  rules:
  - host: portal.nok.local
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
